--- a/themes/raytaylorism/source/css/_base/lib_customize.styl
+++ b/themes/raytaylorism/source/css/_base/lib_customize.styl
@@ -1,8 +1,10 @@
 html
     color rgba(0, 0, 0, 0.8)
 
+//add by uuxia 20220109容页面的宽度改变
+//width 700px
 .container
-    width 700px
+    width 50%
     @media (max-width: 767px)
         width 90%
     .row
@@ -15,7 +17,7 @@ html
 //add by uuxia 20180402 内容页面的宽度改变
 .container.main-container1
     width 70%
-    @media (max-width: 967px)
+    @media (max-width: 767px)
         width 100%
 .main-container1
             margin-top 30px
