--- a/themes/raytaylorism/source/css/_base/lib_customize.styl
+++ b/themes/raytaylorism/source/css/_base/lib_customize.styl
@@ -11,7 +11,7 @@ html
         margin-left auto
         margin-right auto
 .container.main-container
-    @media (max-width: 767px)
+    @media (max-width: 50%)
         width 100%
 
 //add by uuxia 20180402 内容页面的宽度改变
