--- a/themes/raytaylorism/source/css/_base/lib_customize.styl
+++ b/themes/raytaylorism/source/css/_base/lib_customize.styl
@@ -4,14 +4,14 @@ html
 //add by uuxia 20220109容页面的宽度改变
 //width 700px
 .container
-    width 60%
+    width 55%
     @media (max-width: 767px)
-        width 90%
+        width 55%
     .row
         margin-left auto
         margin-right auto
 .container.main-container
-    @media (max-width: 60%)
+    @media (max-widt55%)
         width 100%
 
 //add by uuxia 20180402 内容页面的宽度改变
