--- a/themes/raytaylorism/layout/_partial/footer.ejs
+++ b/themes/raytaylorism/layout/_partial/footer.ejs
@@ -21,7 +21,7 @@
                     <a class="social-link" href="<%= site.data.link.extern[name] %>" target="_blank"><%= name %></a>
                 <% } %>
                 <div style="display: flex;width: 800px;position:absolute;left:44.5%;margin-bottom: 90px;">
-                     <a style="margin-top: 15px;margin-left: 7px;" href="<%= theme.beianurl %>"  style="color:#f72b07" target="_blank"><%= theme.record %></a>
+                     <a class="social-link" href="<%= theme.beianurl %>" target="_blank"><%= theme.record %></a>
                 </div>
             </div>
             <% } %>
