--- a/themes/raytaylorism/layout/_partial/footer.ejs
+++ b/themes/raytaylorism/layout/_partial/footer.ejs
@@ -21,7 +21,7 @@
                     <a class="social-link" href="<%= site.data.link.extern[name] %>" target="_blank"><%= name %></a>
                 <% } %>
                 <tr></tr>
-                <a class="social-link" href="<%= theme.beianurl %>" target="_blank"><%= theme.record %></a>
+                <a class="beian-link" href="<%= theme.beianurl %>" target="_blank"><%= theme.record %></a>
             </div>
             <% } %>
 
