--- a/themes/raytaylorism/source/css/_partial/footer.styl
+++ b/themes/raytaylorism/source/css/_partial/footer.styl
@@ -3,6 +3,12 @@ a.social-link
     color #f5f5f5
     margin-right 10px
 
+a.beian-link
+    display inline-block
+    color #074486
+    margin-right 10px
+    margin-top 10px
+
     &:hover
         color #e0e0e0
 
