--- a/themes/raytaylorism/source/css/_partial/footer.styl
+++ b/themes/raytaylorism/source/css/_partial/footer.styl
@@ -5,8 +5,9 @@ a.social-link
 
 a.beian-link
     display inline-block
-    color #074486
+    color #811208
     margin-right 10px
+    font-size 20px
     margin-top 10px
 
     &:hover
