--- a/themes/raytaylorism/source/css/_partial/footer.styl
+++ b/themes/raytaylorism/source/css/_partial/footer.styl
@@ -5,9 +5,10 @@ a.social-link
 
 a.beian-link
     display inline-block
-    color #811208
+    color #ffffff
     margin-right 10px
-    font-size 10px
+    font-size:0.875em
+    font-weight: bold
     margin-top 10px
 
     &:hover
