--- a/themes/raytaylorism/source/css/_partial/footer.styl
+++ b/themes/raytaylorism/source/css/_partial/footer.styl
@@ -5,7 +5,7 @@ a.social-link
 
 a.beian-link
     display inline-block
-    color #ffffff
+    color #4ea2b0
     margin-right 10px
     font-size:0.875em
     font-weight: bold
