--- a/themes/raytaylorism/layout/_partial/head.ejs
+++ b/themes/raytaylorism/layout/_partial/head.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
 
     <%
     var title = [];
@@ -30,7 +30,7 @@
     <meta name="description" content="<%= strip_html(page.content).replace(/^\s*/, '').replace(/\s*$/, '').substring(0, 150) %>">
     <% } %>
     <% if (page.keywords){ %><meta name="keywords" content="<%= page.keywords %>"><% } %>
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
 
     <% if (page.title){ %><meta property="og:title" content="<%= page.title %>"/><% } %>
     <meta property="og:site_name" content="<%= config.title %>"/>
