--- a/themes/raytaylorism/source/css/_partial/tablecontents.styl
+++ b/themes/raytaylorism/source/css/_partial/tablecontents.styl
@@ -2,7 +2,7 @@
     position fixed
     top 0px
     margin-top 15%
-    left calc(70% + 120px)//add by uuxia 20180402
+    left calc(75%)//add by uuxia 20180402
 
     ol
         list-style-type none
