--- a/themes/raytaylorism/layout/_partial/article.ejs
+++ b/themes/raytaylorism/layout/_partial/article.ejs
@@ -11,7 +11,7 @@
             </div>
             <%- partial('post/time') %>
             <%- partial('post/readtimes') %>
-#            <%- partial('post/tag') %>
+            <%- partial('post/tag') %>
             <%- partial('post/tablecontents') %>
 
             <div class="entry <%= theme.color.link %>-link-context">
